force-app/main/default/objects/cpm__Recurring_Mandate_Schedule__c/fields/cpm__Auto_Create__c.field-meta.xml
<CustomField>
    <fullName>cpm__Auto_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create</label>
    <type>Checkbox</type>
</CustomField>