force-app/main/default/objects/cpm__Recurring_Mandate_Schedule__c/fields/cpm__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__End_Date__c</fullName>
    <inlineHelpText>End date of the period that mandate schedule records will be generated for. Mandate schedule records will be generated with a processing date until the end date, but not after the end date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>