force-app/main/default/objects/cpm__Recurring_Mandate_Schedule__c/fields/cpm__Monthly_Day_Strategy__c.field-meta.xml
<CustomField>
    <fullName>cpm__Monthly_Day_Strategy__c</fullName>
    <inlineHelpText>Strategy used to calculate the Processing / Run day. Available strategies: 
- Day of Month: Day of month specified in field Targeted Day of Month will be used. 
- First Monday: First Monday of this month
- Last Friday: Last Friday of this month</inlineHelpText>
    <label>Monthly Day Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day of Month</fullName>
            </value>
            <value>
                <fullName>First Monday</fullName>
            </value>
            <value>
                <fullName>Last Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>