force-app/main/default/objects/cpm__Recurring_Mandate_Schedule__c/fields/cpm__Process_on_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>cpm__Process_on_Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if mandate schedule should be processed on Tuesday.</inlineHelpText>
    <label>Process on Tuesday</label>
    <type>Checkbox</type>
</CustomField>