force-app/main/default/objects/cpm__Recurring_Mandate_Schedule__c/fields/cpm__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Start_Date__c</fullName>
    <inlineHelpText>Start date of the period that mandate schedule records will be generated for. Mandate schedule records will be generated with a processing date as of the start date, but not before the start date.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>