force-app/main/default/objects/cpm__Recurring_Mandate_Schedule__c/fields/cpm__Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Status__c</fullName>
    <inlineHelpText>Should be New for new Recurring Mandate Schedule records and Generated after Mandate Schedule records have been generated. System will set status to Generated after records have been generated.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>