force-app/main/default/objects/cpm__Recurring_Mandate_Schedule__c/fields/cpm__Target__c.field-meta.xml
<CustomField>
    <fullName>cpm__Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LIBERBANK (CAJASTUR)</fullName>
            </value>
            <value>
                <fullName>TRIODOS BANK</fullName>
            </value>
            <value>
                <fullName>CAIXABANK DONATIVOS</fullName>
            </value>
            <value>
                <fullName>BANKIA</fullName>
            </value>
            <value>
                <fullName>CAIXABANK INTERNA</fullName>
            </value>
            <value>
                <fullName>BANC SABADELL</fullName>
            </value>
            <value>
                <fullName>BANCO SANTANDER BIZUM</fullName>
            </value>
            <value>
                <fullName>CUENTA DOLARES</fullName>
            </value>
            <value>
                <fullName>CUENTA CUADRE-PROVISIONES</fullName>
            </value>
            <value>
                <fullName>LA CAIXA CCC OPERATIVA</fullName>
            </value>
            <value>
                <fullName>KUTXABANK</fullName>
            </value>
            <value>
                <fullName>ABANCA</fullName>
            </value>
            <value>
                <fullName>CAIXABANK FUSION BANKIA</fullName>
            </value>
            <value>
                <fullName>UNICAJA</fullName>
            </value>
            <value>
                <fullName>BBVA BCN GENERAL</fullName>
            </value>
            <value>
                <fullName>BANCO SANTANDER EMERGENCIAS</fullName>
            </value>
            <value>
                <fullName>BANCO SANTANDER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>