force-app/main/default/objects/cpm__Recurring_Mandate_Schedule__c/recordTypes/cpm__Daily.recordType-meta.xml
<RecordType>
    <fullName>cpm__Daily</fullName>
    <active>true</active>
    <label>Daily</label>
</RecordType>